[package]
name = "shell"
version = "0.1.0"
edition = "2021"
description = "Plugin to run shell commands"
license = "GPLv3"
homepage = "https://github.com/anyrun-org/plugin-shell"
repository = "https://github.com/anyrun-org/plugin-shell"
readme = "README.md"
author = ["Kirottu"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
anyrun-plugin = "0.1.0"
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
